# Agentic_AI

./: .gitignore  README.md  pyproject.toml
Basics/: README.md  ai_model_vs_chatbot_vs_agent.py  calling_the_ai.py  project_zero_agent.py  streamlit_app.py  structuring_with_pydantic.py  teaching_it_to_choose.py
LangChain/: langchain_basics.py
LangChain/Notebook for reference/: 01_landscape.ipynb  02_environment_models_messages.ipynb  03_prompt_templates_structured_output.ipynb  Common FAQs.txt
