[project]
name = "agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.117.1",
    "deepagents>=0.6.12",
    "ipykernel>=7.3.0",
    "langchain>=1.3.14",
    "langchain-openai>=1.4.0",
    "langchain-openrouter>=0.2.7",
    "langchain-xai>=1.3.0",
    "openai>=2.46.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "streamlit>=1.60.0",
]
